# Climate-Change-Analysis

./: .breakpoints  .replit  README.md  app.py  app2.py  climate.csv  filter_data.py  pyproject.toml  replit.nix
templates/: Style.css  climate.html  data.html  data1.html  home.html  home2.css  pre_processing.html
uploads/: advertising_and_sales_clean.csv  telecom_churn_clean.csv
